--- a/package.json
+++ b/package.json
@@ -9,10 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/firestore": "^18.5.0",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/compat": "^5.3.20",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.0",
     "expo": "~49.0.8",
+    "expo-av": "~13.4.1",
+    "expo-blur": "~12.4.1",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-sharing": "~11.5.0",
+    "expo-speech": "~11.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-tts": "^4.1.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-navigation": "^5.0.0",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
